Add delete to docs, add routing for delete users
